# cogniscient

./: .gitignore  README.md  sprinkler.md
PoC/: LLM_SERVICE_TRANSITION_FIXES.md  README.md  RELEASE.md  comprehensive_test.py  config_ConfigManager.json  config_SampleAgentA.json  config_SampleAgentB.json  config_SystemParametersManager.json  debug_async_handler.py  debug_prompt_info.py  debug_settings.py  demo.py  demo_kernel_architecture.py  demo_llm_orchestration.py  demo_oauth_integration.py  demo_plan.json  fix_syntax.py  interactive_cli_prd.md  main.py  mcp_connection_registry_epic.md  pyproject.toml  requirements.txt  setup.py  simple_test.py  test_additional_prompt_info.py  test_agent_usage.py  test_async_fix.py  test_cli_restructuring.py  test_config_loading.py  test_context_window.py  test_conversation_history.py  test_creds_loading.py  test_default_creds.py  test_env_overrides.py  test_exit.py  test_frontend_api.py  test_litellm_fix.py  test_llm_config_management.py  test_new_architecture.py  test_new_architecture_comprehensive.py  (+3 more)
PoC/cogniscient/: __init__.py  cli.py  cli.py.backup
PoC/configs/: combined.json  dns_only.json  website_only.json
PoC/docs/: project-brief.md
PoC/frontend/: api.py  main.py
PoC/plugins/: external-agent-sdk.md
PoC/runtime_data/: external_agents_registry.json  tmpptd23h25
PoC/src/: main.py  simple_orchestrator.py  ucs_runtime.py
PoC/tests/: conftest.py  test_agent_base.py  test_agent_functionality.py  test_api_endpoints.py  test_chat_interface.py  test_cogniscient.py  test_configuration_management.py  test_context_management.py  test_creds_loading.py  test_external_agent_registration.py  test_gcs_runtime_shutdown.py  test_generator.py  test_llm_orchestrator.py  test_loader.py  test_manager.py  test_mcp_client_service_shutdown.py  test_mcp_integration.py  test_mcp_registry_integration.py  test_mcp_service.py  test_oauth_integration.py  test_sample_agent_a.py  test_sample_agent_b.py  test_token_counting.py  test_token_display.py  test_unified_agent_manager.py  test_validator.py  test_website_checking.py
reference/: .env.example  README.md  demo_real_adaptive_loop.py  main.py  pyproject.toml  requirements.txt  test_mcp_client.py  test_streaming_behavior.py  test_vllm_streaming.py
reference/common/: settings.py
reference/gcs_kernel/: __init__.py  __main__.py  domain_manager.py  event_loop.py  kernel.py  logger.py  models.py  registry.py  resource_manager.py  scheduler.py  security.py  tool_call_model.py  tool_execution_manager.py
reference/runtime_data/: mcp_servers.json
reference/services/: __init__.py  ai_orchestrator.py  config.py  config_schema.py  example_mcp_server.py  example_service.py  pydantic_config.py
reference/tests/: run_integration_tests.py  test_ai_orchestrator.py  test_conversation_history.py  test_error_handling_retry_logic.py  test_event_loop.py  test_full_tool_loop.py  test_kernel.py  test_llm_ai_orchestrator.py  (+14 more)
(+308 files in other folders)
