[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cogniscient"
version = "0.1.1"
description = "A generic control system engine for managing AI agents and services"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.40.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.0",
    "dnspython>=2.0.0",
    "prompt-toolkit>=3.0.0",
    "aiohttp>=3.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0"
]

[project.urls]
Homepage = "https://github.com/cogniscient/cogniscient"
Repository = "https://github.com/cogniscient/cogniscient"
Documentation = "https://github.com/cogniscient/cogniscient#readme"

[project.scripts]
cogniscient = "cogniscient.ui.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cogniscient*"]

[tool.setuptools.package-data]
cogniscient = ["**/*.json", "**/*.md", "**/*.txt", "**/*.yaml", "**/*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"