[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcs-kernel"
version = "0.1.0"
description = "GCS Kernel - Generic Control System Kernel for AI agent orchestration"
readme = "README.md"
authors = [{name = "Cogniscient Team"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "httpx>=0.25.2",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "cryptography>=41.0.8",
    "python-jose[cryptography]>=3.3.0",
    "uv>=0.1.0",
    "ruff>=0.1.6",
    "mypy>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.6",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/cogniscient/gcs-kernel"
Repository = "https://github.com/cogniscient/gcs-kernel"

[tool.setuptools.packages.find]
where = ["."]
include = ["gcs_kernel*", "services*", "ui*"]

[project.scripts]
gcs = "ui.cli.cli:main"